# mlflow-demo

./: .gitignore  LICENSE  README.md  docker-compose.yml  env.example  start.sh  stop.sh
llms-agents/: pyproject.toml
llms-agents/notebooks/: 01_tracing_demo.ipynb  02_evaluation.ipynb  03_prompt_registry.ipynb
llms-agents/scripts/: run_pipeline.py
llms-agents/src/agents/: __init__.py  config.py  graph.py  nodes.py  state.py  tools.py
llms-agents/tests/: test_agents.py
model-training/: pyproject.toml
model-training/notebooks/: 01_experiment_tracking.ipynb  02_model_registry.ipynb
model-training/scripts/: run_training.py
model-training/src/training/: __init__.py  config.py  dataset.py  evaluate.py  model.py  train.py
model-training/tests/: test_training.py
