[project]
name = "llms-agents"
version = "0.1.0"
description = "LangGraph multi-agent pipeline with MLflow tracing, evaluation, and prompt registry"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.19.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "boto3>=1.35.0",          # MLflow S3/MinIO artifact store
    "psycopg2-binary>=2.9.0", # MLflow PostgreSQL backend
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
