[project]
name = "model-training"
version = "0.1.0"
description = "PyTorch CNN on MNIST with MLflow experiment tracking, model registry, and serving"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.19.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "boto3>=1.35.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/training"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
